<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="@dimen/screen_padding_small">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/back_height_weidth"
        android:layout_height="@dimen/back_height_weidth"
        android:src="@mipmap/back_foreground"/>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="@dimen/large_text"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_below="@id/iv_back"/>

    <TextView
        android:id="@+id/tv_basic_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_provide_your_basic_information"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/tv_welcome"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_basic_info"
        android:layout_above="@id/tvDiffAccSignin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/iv_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/user_foreground"
        android:layout_margin="@dimen/pic_margin"/>

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:layout_below="@id/iv_profile_pic"/>


    <EditText
        android:id="@+id/et_email_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@id/et_full_name"
        android:inputType="textEmailAddress"/>

    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layout_pass_reg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:passwordToggleEnabled="true"
         android:layout_below="@id/et_email_reg">
        <EditText
            android:id="@+id/et_pass_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_confpass_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_below="@id/layout_pass_reg">

        <EditText
            android:id="@+id/et_confirm_pass_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:layout_below="@id/layout_pass_reg"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/et_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:layout_below="@id/layout_confpass_reg"/>

    <EditText
        android:id="@+id/etDateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth"
        android:layout_below="@id/et_gender"/>

    <EditText
        android:id="@+id/etUserType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_type"
        android:layout_below="@id/etDateOfBirth"/>

    <EditText
        android:id="@+id/etOccupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/occupation"
        android:layout_below="@+id/etUserType"/>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/reg_continue"
        android:background="@drawable/button_round"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/tvDiffAccSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_different_account"
        android:layout_above="@+id/btnReg"
        android:gravity="center_horizontal"/>


</RelativeLayout>