<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity"
    android:padding="@dimen/screen_padding">

    <TextView
        android:id="@+id/tv_otp_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        android:textSize="@dimen/otp_heading"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_otp_para"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_verification_code_sent_to_your_number_via_sms"
        android:layout_below="@id/tv_otp_heading"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:textStyle="bold"
        android:textSize="@dimen/otp_para"/>

    <EditText
        android:id="@+id/et_otp1"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:layout_below="@id/tv_otp_para"/>
    <EditText
        android:id="@+id/et_otp2"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:layout_below="@id/tv_otp_para"
        android:layout_toRightOf="@id/et_otp1"/>
    <EditText
        android:id="@+id/et_otp3"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:layout_below="@id/tv_otp_para"
        android:layout_toRightOf="@id/et_otp2"/>
    <EditText
        android:id="@+id/et_otp4"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:layout_below="@id/tv_otp_para"
        android:layout_toRightOf="@id/et_otp3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:layout_below="@id/et_otp1">

        <Button
            android:id="@+id/btn_otp_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resend"
            android:textStyle="bold"
            android:layout_margin="@dimen/btn_margin"
            android:background="@drawable/btn_round_resend"/>

        <Button
            android:id="@+id/btn_otp_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:text="@string/submit"
            android:layout_margin="@dimen/btn_margin"/>

    </LinearLayout>

</RelativeLayout>